# reptrainer

./: .dockerignore  .gcloudignore  .gitignore  LICENSE  Procfile  README.md  app.json  architecture_diagram.md  blog.md  check.md  cloudbuild.yaml  criteria.md  deploy-gcp.sh  docker-compose.yml  features.md  features2.md  features3.md  hubspot_plan.md  mermaid.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  socket.md  some.md  submission_description.md  test_images.js  todo.md  why-knowledge.md
app/: layout.tsx  page.tsx
apps/api/: .env.example  Dockerfile  (+8 more)
apps/live-agent/: .env.example  Dockerfile  agent.py  auth.py  config.py  deploy.sh  main.py  pyproject.toml  vertex_search.py
apps/live-agent/app/: analysis.py  config.py  firestore_client.py  main.py  persona_engine.py  vertex_search.py
apps/live-agent/app/persona_agent/: agent.py
apps/live-agent/app/reptrainer_live_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/live-agent/app/tools/: __init__.py  end_roleplay.py  google_search.py  log_objection.py  log_sales_insight.py  research_competitor.py  update_persona_mood.py
apps/live-agent/reptrainer_live_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/live-agent/tools/: __init__.py  log_objection.py  log_sales_insight.py  update_persona_mood.py
components/: persona-generator.tsx  product-setup.tsx  roleplay-session.tsx  session-history.tsx  session-results.tsx
hooks/: use-background-generation.ts  use-gemini-live.ts
lib/: db.ts
plans/: 1-plan.md  criteria.md  implementation-plan.md  plan.md
(+149 files in other folders)
